Edit menu component

--- a/source/client/views/components/menu.html
+++ b/source/client/views/components/menu.html
@@ -2,6 +2,7 @@
     <h3>Menu</h3>
     <ul class="nav nav-pills nav-stacked">
         <li><a href="{{pathFor route='home'}}">Accueil</a></li>
+        <li><a href="{{pathFor route='article.list'}}">Article</a></li>
     </ul>
     <h3>Mon compte</h3>
     <ul class="nav nav-pills nav-stacked">
